Controller und JSON Backend erweitert mit komplettem CRUD.
